# BrooksRFIGAN

./: .gitignore  LICENSE.md  README.md  README.rst  make_training_set.py  models.py  preprocessing.py  pyproject.toml  rfisim_funcs.py  test.py  test_sim.py  train.py
brooksrfigan/: discriminator.py  generator.py  preprocessing.py  training.py
docs/: Makefile
docs/source/: conf.py  usage.rst
