[project]
name = "brooksrfigan"
version = "0.0.1"
requires-python = ">=3.0.0, <=3.10.0" # Ensure python 3, CASA doesn't work on the latest python
dependencies = [
    "numpy",
    "scipy",
    "tensorflow",
    "casatools",
    "casadata"
]
description = "A library to enable quick interface between the CASA Measurement Set format and Tensorflow for training a GAN"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [{name = "Jacob Brooks", email = "jebrooks@uclan.ac.uk"}]


[project.urls]
repository = "https://github.com/JakeEBrooks/BrooksRFIGAN"